# test

./: build-apk.yml  main.kv  pyproject.toml  单人签到.py
.github/workflows/: main.yml
单人签到/: app.py
