[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "单人签到"
bundle = "com.example.dormcheckin"
version = "0.0.1"
url = "https://github.com/your-username/your-repo"
license = "MIT"
author = "Your Name"
author_email = "your.email@example.com"

[tool.briefcase.app.单人签到]
formal_name = "单人签到"
description = "宿舍签到应用"
sources = ["src/单人签到"]
requires = [
    "requests",
    "pycryptodome",
]

[tool.briefcase.app.单人签到.android]
requires = [
    "requests",
    "pycryptodome",
]

[tool.briefcase.app.单人签到.android.permissions]
- android.permission.INTERNET
- android.permission.ACCESS_NETWORK_STATE